# ZIRC

./: .env  .gitignore  LICENSE  README.md  gfl_farm.sh
.github/workflows/: build_release.yml  gfl_farm.yml
docs/: 00_poc_list.md  01_trimmer.md  02_gflzirc.md  03_demo.md  04_gha.md
drafts/hook1/: hook.js  hook_respon.js
drafts/hook2/: hook_respon.js  run.py
drafts/hook3/: hook_mitm.js  main.py
drafts/hook4_nodata/: find_ui.py  hook_mitm.js  main.py
poc/calculator/reign_of_chaos/: hook.js  main.py
poc/calculator/reign_of_chaos/res/: interest.json  table.json
poc/calculator/reign_of_chaos/sample/: note.md  sample.json
poc/trainer/baji/: main.py
poc/trainer/value_modify/: hook.js
src/: build.ps1
src/common/: apply_template.py  gen_offsets.py
src/common/include/: offsets.ini.json  offsets.json
src/core/: README.md  pyproject.toml
src/core/gflzirc/: proxy.py
src/cpp/: SConstruct
src/cpp/src/: offsets.h
src/demo/: greyzone_reset_demo.py
src/demo/farm/experience/: epa_plus.py
src/demo/farm/rescue/: epa_plus.py
src/demo/utils/common/: supply.py
src/gha/: GFL_CONFIG  agent.py
src/python/: build_py.py
src/python/src/: hook_mitm.js.in  main.py
tools/dev/injector/: hook.js  run.py
tools/dev/monitor/: hook_dual.js  run.py
tools/meta/: dump_meta.py
tools/trainer/baji/: hook.js  main.py
tools/trainer/value_modify/: main.py
