[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gflzirc"
version = "0.4.0"
description = "Core libraries for ZIRC project (GFL Protocol)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "MaaGF1"}
]
dependencies = [
    "requests>=2.25.0"
]

[project.urls]
Homepage = "https://github.com/MaaGF1/ZIRC"